Fixed Issue 75 Feature Request: Need to enable specifying soft tabs

--- a/junithelper-core/release/junithelper-config.properties
+++ b/junithelper-core/release/junithelper-config.properties
@@ -4,6 +4,8 @@ language:en
 outputFileEncoding:UTF-8
 # forceCRLF/forceLF/forceNewFileCRLF/forceNewFileLF
 lineBreakPolicy=forceNewFileCRLF
+useSoftTabs=false
+softTabSize=4
 directoryPathOfProductSourceCode:src/main/java
 directoryPathOfTestSourceCode:src/test/java
 # junitVersion:version3/version4
