--- a/junithelper-core/src/test/resources/junithelper-config_softTabs.properties
+++ b/junithelper-core/src/test/resources/junithelper-config_softTabs.properties
@@ -1,8 +1,8 @@
 # JUnit Helper version ${project.version}
 language:en
 outputFileEncoding:UTF-8
-useSoftTabs=false
-softTabSize=4
+useSoftTabs=true
+softTabSize=2
 # forceCRLF/forceLF/forceNewFileCRLF/forceNewFileLF
 lineBreakPolicy=forceCRLF
 directoryPathOfProductSourceCode:src/main/java
