--- a/junithelper-core/tools/junithelper-config.properties
+++ b/junithelper-core/tools/junithelper-config.properties
@@ -1,7 +1,11 @@
-# JUnit Helper version 1.6
+# JUnit Helper version 1.10
 # language:en/ja
 language:en
 outputFileEncoding:UTF-8
+useSoftTabs=true
+softTabSize=4
+# forceCRLF/forceLF/forceNewFileCRLF/forceNewFileLF
+lineBreakPolicy=forceNewFileCRLF
 directoryPathOfProductSourceCode:src/main/java
 directoryPathOfTestSourceCode:src/test/java
 # junitVersion:version3/version4
@@ -9,7 +13,7 @@ junitVersion:version4
 testCaseClassNameToExtend:junit.framework.TestCase
 isTemplateImplementationRequired:true
 target.isAccessorExcluded:true
-target.isExceptionPatternRequired:false
+target.isExceptionPatternRequired:true
 target.isPackageLocalMethodRequired:true
 target.isProtectedMethodRequired:true
 target.isPublicMethodRequired:true
@@ -28,5 +32,5 @@ testMethodName.exceptionAreaDelimiter:$
 mockObjectFramework:
 # testingPatternExplicitComment:ArrangeActAssert/GivenWhenThen
 testingPatternExplicitComment:
-isExtensionEnabled:true
+isExtensionEnabled:false
 extensionConfigXML:junithelper-extension.xml
