--- a/junithelper-core/pom.xml
+++ b/junithelper-core/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>org.junithelper</groupId>
   <artifactId>junithelper-core</artifactId>
-  <version>1.9</version>
+  <version>1.10</version>
   <packaging>jar</packaging>
 
     <name>junithelper-core</name>
@@ -12,7 +12,6 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jmockit.version>0.999.2</jmockit.version>
     </properties>
 
     <repositories>
@@ -36,11 +35,11 @@
     <distributionManagement>
         <repository>
             <id>repo</id>
-            <url>https://github.com/seratch/junithelper/raw/master/mvn-repo/releases</url>
+            <url>https://seratch.github.com/mvn-repo/releases</url>
         </repository>
         <snapshotRepository>
             <id>snapshot-repo</id>
-            <url>https://github.com/seratch/junithelper/raw/master/mvn-repo/snapshots</url>
+            <url>https://seratch.github.com/mvn-repo/snapshots</url>
         </snapshotRepository>
     </distributionManagement>
 
@@ -161,97 +160,46 @@
             <groupId>org.mozilla</groupId>
             <artifactId>juniversalchardet</artifactId>
             <version>1.0.3</version>
+            <scope>compile</scope>
         </dependency>
         <!-- Commons IO -->
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.0</version>
+            <scope>compile</scope>
         </dependency>
         <!-- JUnit -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.8.2</version>
-            <scope>compile</scope>
+            <version>4.10</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>junit-addons</groupId>
             <artifactId>junit-addons</artifactId>
             <version>1.4</version>
-            <scope>compile</scope>
+            <scope>test</scope>
         </dependency>
         <!-- Mockito -->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <version>1.8.5</version>
-            <scope>compile</scope>
-        </dependency>
-        <!-- JMock2 -->
-        <dependency>
-            <groupId>org.jmock</groupId>
-            <artifactId>jmock-junit3</artifactId>
-            <version>2.5.1</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jmock</groupId>
-            <artifactId>jmock</artifactId>
-            <version>2.5.1</version>
-            <scope>compile</scope>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-core</artifactId>
             <version>1.1</version>
-            <scope>compile</scope>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-library</artifactId>
             <version>1.1</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>jmock</groupId>
-            <artifactId>jmock-cglib</artifactId>
-            <version>1.0.1</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jmock</groupId>
-            <artifactId>jmock-legacy</artifactId>
-            <version>2.5.1</version>
-            <scope>compile</scope>
-        </dependency>
-        <!-- JMockit -->
-        <!-- 
-        <dependency>
-            <groupId>mockit</groupId>
-            <artifactId>jmockit</artifactId>
-            <version>${jmockit.version}</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>mockit</groupId>
-            <artifactId>jmockit-coverage</artifactId>
-            <version>${jmockit.version}</version>
-            <scope>compile</scope>
-        </dependency>
-         -->
-        <!-- EasyMock -->
-        <dependency>
-            <groupId>easymock</groupId>
-            <artifactId>easymock</artifactId>
-            <version>2.0</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>easymock</groupId>
-            <artifactId>easymockclassextension</artifactId>
-            <version>2.2</version>
-            <scope>compile</scope>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
