Using junithelper-core 1.10

--- a/maven-junithelper-plugin/pom.xml
+++ b/maven-junithelper-plugin/pom.xml
@@ -4,7 +4,7 @@
     <groupId>org.junithelper</groupId>
     <artifactId>maven-junithelper-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.9</version>
+    <version>1.10</version>
     <name>maven-junithelper-plugin Maven Mojo</name>
     <url>http://junithelper.org</url>
 
@@ -83,7 +83,7 @@
         <dependency>
             <groupId>org.junithelper</groupId>
             <artifactId>junithelper-core</artifactId>
-            <version>1.9</version>
+            <version>1.10</version>
         </dependency>
         <dependency>
             <groupId>org.mozilla</groupId>
@@ -98,7 +98,8 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.8.2</version>
+            <version>4.10</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
