--- a/junithelper-core/release/junithelper-config.properties
+++ b/junithelper-core/release/junithelper-config.properties
@@ -2,7 +2,7 @@
 # language:en/ja
 language:en
 outputFileEncoding:UTF-8
-# forceCRLF/forceLF/forceNewFileCRLF/forceNewFileLF
+# lineBreakPolicy:forceCRLF/forceLF/forceNewFileCRLF/forceNewFileLF
 lineBreakPolicy=forceNewFileCRLF
 useSoftTabs=false
 softTabSize=4
