--- a/maven-plugin/pom.xml
+++ b/maven-plugin/pom.xml
@@ -4,18 +4,47 @@
     <groupId>org.junithelper</groupId>
     <artifactId>maven-junithelper-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.10</version>
+    <version>1.11</version>
     <name>maven-junithelper-plugin Maven Mojo</name>
     <url>http://junithelper.org</url>
 
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
+
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <scm>
+        <connection>scm:git:git@github.com:seratch/junithelper.git</connection>
+        <developerConnection>scm:git:git@github.com:seratch/junithelper.git</developerConnection>
+        <url>git@github.com:seratch/junithelper.git</url>
+    </scm>
+
+    <developers>
+        <developer>
+            <id>seratch</id>
+            <name>Kazuhiro Sera</name>
+            <email>seratch@gmail.com</email>
+        </developer>
+    </developers>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
+    <!-- TODO delete -->
     <repositories>
         <repository>
             <id>releases</id>
             <url>http://junithelper.googlecode.com/svn/trunk/mvn-repo/releases</url>
-        </repository>
-        <repository>
-            <id>snapshots</id>
-            <url>http://junithelper.googlecode.com/svn/trunk/mvn-repo/snapshots</url>
         </repository>
     </repositories>
 
@@ -26,23 +55,25 @@
         </pluginRepository>
     </pluginRepositories>
 
-    <distributionManagement>
-        <repository>
-            <id>repo</id>
-            <url>http://junithelper.googlecode.com/svn/trunk/mvn-repo/releases</url>
-        </repository>
-        <snapshotRepository>
-            <id>snapshot-repo</id>
-            <url>http://junithelper.googlecode.com/svn/trunk/mvn-repo/snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
-
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-idea-plugin</artifactId>
                 <version>2.2</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -66,6 +97,18 @@
                 </executions>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.junithelper</groupId>
                 <artifactId>maven-junithelper-plugin</artifactId>
                 <configuration>
@@ -79,21 +122,25 @@
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
             <version>2.0</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.junithelper</groupId>
             <artifactId>junithelper-core</artifactId>
-            <version>1.10</version>
+            <version>1.11</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>org.mozilla</groupId>
+            <groupId>com.googlecode.juniversalchardet</groupId>
             <artifactId>juniversalchardet</artifactId>
             <version>1.0.3</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.0</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
