--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.metadata
 .settings
 .classpath
 .project
@@ -5,9 +6,11 @@
 *.ipr
 *.iws
 *.log
+bin/
 dist/
 lib_managed/
 project/boot/
 project/plugins/project/
 target/
 *.swp
+
