--- a/eclipse-plugin/.project
+++ b/eclipse-plugin/.project
@@ -1,7 +1,10 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
   <name>junithelper-plugin</name>
-  <comment>JUnit Helper Eclipse Plugin</comment>
-  <projects/>
+  <comment>JUnit Helper Eclipse Plugin. NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
+  <projects>
+    <project>junithelper-core</project>
+  </projects>
   <buildSpec>
     <buildCommand>
       <name>org.eclipse.jdt.core.javabuilder</name>
